<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.bugjc.ea</groupId>
    <artifactId>quick-ea</artifactId>
    <packaging>pom</packaging>
    <version>1.0</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>1.8</java.version>

        <spring-boot.version>2.0.3.RELEASE</spring-boot.version>
        <spring-boot-starter.version>2.0.3.RELEASE</spring-boot-starter.version>
        <spring-boot-starter-web.version>2.0.3.RELEASE</spring-boot-starter-web.version>
        <spring.boot.admin.version>2.0.3</spring.boot.admin.version>
        <spring-boot-starter-security.version>2.0.3.RELEASE</spring-boot-starter-security.version>
        <spring-boot-starter-actuator.version>2.0.3.RELEASE</spring-boot-starter-actuator.version>
        <spring-boot-starter-test.version>2.0.3.RELEASE</spring-boot-starter-test.version>
        <spring-boot-starter-data-redis.version>2.0.3.RELEASE</spring-boot-starter-data-redis.version>
        <spring-boot-starter-jdbc.version>2.0.3.RELEASE</spring-boot-starter-jdbc.version>

        <spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
        <spring-cloud-starter-netflix-zuul.version>2.0.3.RELEASE</spring-cloud-starter-netflix-zuul.version>
        <spring-cloud-starter-netflix-eureka-client.version>2.0.3.RELEASE</spring-cloud-starter-netflix-eureka-client.version>
        <spring-cloud-starter-netflix-eureka-server.version>2.0.3.RELEASE</spring-cloud-starter-netflix-eureka-server.version>
        <spring-cloud-zuul-ratelimit.version>2.0.3.RELEASE</spring-cloud-zuul-ratelimit.version>
        <spring-cloud-sleuth-zipkin.version>2.0.3.RELEASE</spring-cloud-sleuth-zipkin.version>
        <spring-cloud-starter-sleuth.version>2.0.3.RELEASE</spring-cloud-starter-sleuth.version>
        <spring-cloud-starter-turbine.version>1.4.5.RELEASE</spring-cloud-starter-turbine.version>
        <spring-cloud-netflix-turbine.version>1.4.5.RELEASE</spring-cloud-netflix-turbine.version>
        <spring-cloud-starter-hystrix-dashboard.version>1.4.5.RELEASE</spring-cloud-starter-hystrix-dashboard.version>
        <spring-cloud-starter-feign.version>1.4.5.RELEASE</spring-cloud-starter-feign.version>
        <spring-cloud-starter-hystrix.version>1.4.5.RELEASE</spring-cloud-starter-hystrix.version>

        <spring-rabbit.version>2.0.3.RELEASE</spring-rabbit.version>
        <fastjson.version>1.2.47</fastjson.version>
        <hutool-all.version>4.1.4</hutool-all.version>
        <lombok.version>1.18.2</lombok.version>
        <slf4j-api.version>1.7.25</slf4j-api.version>
        <log4j-over-slf4j.version>1.7.25</log4j-over-slf4j.version>
        <jcl-over-slf4j.version>1.7.25</jcl-over-slf4j.version>
    </properties>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.0.3.RELEASE</version>
    </parent>

    <modules>
        <module>ea-basis-server-layer</module>
        <module>ea-gateway-layer</module>
        <module>ea-server-layer</module>
        <module>ea-monitor-layer</module>
        <module>ea-devtool-layer</module>
        <module>ea-opensdk-layer</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <repositories>
        <repository>
            <id>maven-ali</id>
            <url>http://maven.aliyun.com/nexus/content/groups/public//</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>always</updatePolicy>
                <checksumPolicy>fail</checksumPolicy>
            </snapshots>
        </repository>
        <repository>
            <id>spring-snapshots</id>
            <name>Spring Snapshots</name>
            <url>https://repo.spring.io/libs-snapshot</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>spring-milestones</id>
            <name>Spring Milestones</name>
            <url>https://repo.spring.io/libs-milestone</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>spring-releases</id>
            <name>Spring Releases</name>
            <url>https://repo.spring.io/libs-release</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>sonatype-nexus-snapshots</id>
            <name>Sonatype Nexus Snapshots</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <releases>
                <enabled>false</enabled>
            </releases>
        </repository>
    </repositories>



    <build>
        <plugins>
            <!-- 测试出错不影响正常的build -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <testFailureIgnore>true</testFailureIgnore>
                </configuration>
            </plugin>
            <!--指定maven编译的版本-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <!-- since 2.0 -->
                <version>3.7.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>UTF8</encoding>
                </configuration>
            </plugin>

        </plugins>
    </build>
</project>